# dls-chatbot

./: pyproject.toml  shell.nix
data/txt/: 1340_ocr.txt  22-Discovering-the-hull-for-boats-that-exceeding-cargo-than-12-passengers_ocr.txt  26-Issue-Navigational-License-for-ships-Jordanian-Transformer_ocr.txt  27-Issue-Navigational-license-for-tourist-boat-transformer_ocr.txt  29-Issue-Navigational-license-boat-services-transformer_ocr.txt  31-Issue-Navigational-license-boat-fishing-transformer_ocr.txt  32- Issuance of a manning-security-certificate for Jordanian-ships-transformer_ocr.txt  38-Approval-of-transformer-control-pollution-schemes_ocr.txt  39-Approval-of-Scheme-Safety-and-Emergency-Transformer_ocr.txt  3B7A1_ocr.txt  3D1E1_ocr.txt  40-Issue-Certificates-Civil-Liability-Transfer_ocr.txt  41-issuance-record-summary-sustainable-for-jordanian-ships-transformer_ocr.txt  4B6E1_ocr.txt  5DA01_ocr.txt  70F91_ocr.txt  Accreditation-Curriculum_ocr.txt  AnnualReport2024_ocr.txt  Approval-of-the-marine-protest-submitted-by-the-captains-of-the-ships-that-visit-the-Jordanian-ports_ocr.txt  Certificate-Now-Sailor-Transformer_ocr.txt  Chief-Marine-Business-Regulation-Instructions_ocr.txt  Classification-Modified%20Bodies-ar_ocr.txt  Code_of_Ethics_and_Public_Service_Ethics_ocr.txt  D46D1_ocr.txt  Driving-license-in-and-out-of-water-transformer_ocr.txt  E5ED1_ocr.txt  Exam-and-evaluation-for-officers-and-engineers-marine_ocr.txt  Examination-on-of-the-foreign-boats-to-twin-the-regional-Jordanian-waters-transformer_ocr.txt  (+126 more)
src/: app.py  ingest.py  onnx_wrappers.py
(+4 files in other folders)
